feat: add script to index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,4 +23,5 @@
             <p class="text-amber-400 font-light">Copyright © 2024 Yang-Yi Shen</p>
         </footer>
     </body>
+    <script src="script.js" defer></script>
 </html>
