feat(frontend): link unsubscribe html to js

--- a/frontend/unsubscribed.html
+++ b/frontend/unsubscribed.html
@@ -14,4 +14,5 @@
         <h1 id="headline" class=" text-5xl text-amber-950 font-extrabold tracking-tight leading-tight">You've been unsubscribed</h1>
         <p class="mt-4 mb-8 text-lg text-amber-500 font-bold">We're sorry we couldn't meet your expectations.</p>
     </body>
+    <script src="./unsubscribed.js" type="module"></script>
 </html>
