feat: add spam clarification

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,8 +25,9 @@
             <button class="py-2 px-4 rounded-r-md text-md text-amber-50 font-extrabold bg-amber-500" type="submit">Submit</button>
         </form>
         <p id="error-message" class="mt-2 font-semibold text-red-600">ERROR: This email is already in use</p>
+        <p id="spam-message" class="font-normal text-amber-300 mt-3">Not getting our emails? Check your spam folder.</p>
         <footer class="mt-32 flex justify-center">
-            <p class="text-amber-400 font-light">Copyright © 2024 Yang-Yi Shen</p>
+            <p class="text-amber-400">Copyright © 2024 Yang-Yi Shen</p>
         </footer>
     </body>
     <script src="script.js" defer></script>
